--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGODB_URI=mongodb+srv://userName:passwordx@clusterName.4ddbo.mongodb.net/?retryWrites=true&w=majority&appName=clusterName
+MONGODB_URI=mongodb+srv://<username>:<password>@<clusterName>.mongodb.net/<databaseName>?retryWrites=true&w=majority&appName=<appName>
 
